# STC_editor

./: .gitignore  .gitmodules  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  README.md  README_ang.md  STCSyntaxHighlighter.cpp  codeeditor.cpp  codeeditor.h  finddialog.cpp  finddialog.h  finddialog.ui  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  stcSyntaxPatterns.cpp  stcSyntaxPatterns.h  stcsyntaxhighlighter.cpp  stcsyntaxhighlighter.h  stcsyntaxpatterns.cpp  stcsyntaxpatterns.h  styles.css  vcpkg-configuration.json  vcpkg.json
.github/workflows/: README.md  release-ubuntu22.04.uml  release-ubuntu22.04.yml  release-windows.yml  release.yml  release_newUbuntuWithoutLinuxDeployQt.yml.notWorking  test-linux.yml
checkers/: PairedTagsChecker.cpp  PairedTagsChecker.h
dictionaries/pl/: README_en.txt  README_pl.txt
tests/: PairedTagsCheckerTests.cpp
types/: CodeBlock.h  documentstatistics.cpp  documentstatistics.h  stcTags.cpp  stcTags.h
ui/: WorkAwareStopwatch.cpp  WorkAwareStopwatch.h  WorkAwareStopwatch.ui  cppcompilerdialog.cpp  cppcompilerdialog.h  errorlist.cpp  errorlist.h  errorlist.ui  finddialog.cpp  finddialog.h  finddialog.ui  gotolinewidget.cpp  gotolinewidget.h  gotolinewidget.ui  highlightdelegate.cpp  highlightdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  shortcutsdialog.cpp  shortcutsdialog.h  stctagsbuttons.cpp  stctagsbuttons.h  stctagsbuttons.ui
utils/: DiffCalculation.cpp  DiffCalculation.h  FileEncodingHandler.cpp  FileEncodingHandler.h  STCSyntaxHighlighter.cpp  STCSyntaxHighlighter.h  SpellChecker.cpp  SpellChecker.h  diffcalculation.cpp  diffcalculation.h
widgets/: BreadcrumbTextBrowser.cpp  BreadcrumbTextBrowser.h  CodeBlocksTableWidget.cpp  CodeBlocksTableWidget.h  DiffReviewDialog.cpp  DiffReviewDialog.h  DiffViewerWidget.cpp  DiffViewerWidget.h  FilteredTagTableWidget.cpp  FilteredTagTableWidget.h  LineNumberArea.cpp  LoginDialog.cpp  LoginDialog.h  RenameFileDialog.cpp  RenameFileDialog.h  RenameFileDialog.ui  StcPreview.cpp  StcPreview.h  StcTablesCreator.cpp  StcTablesCreator.h  StcTablesCreator.ui  TodosTrackerTableWidget.cpp  TodosTrackerTableWidget.h  filteredtagtablewidget.cpp  filteredtagtablewidget.h  stcpreviewwidget.cpp  stcpreviewwidget.h
